Bootstrap intro level

--- a/app/views/levels/primary_button.html.erb
+++ b/app/views/levels/primary_button.html.erb
@@ -1,7 +1,3 @@
-<span>Click me!</span>
 
-<style>
-
-  /* Write your CSS here to make the span look like a button. */
-
-</style>
+<span class="base-button fancy-button">Click me!</span>
+<span class="base-button scary-button">Don't click me!</span>
